2018-02-24  Bruno Haible  <bruno@clisp.org>

	Fix memory map related warnings on Alpine Linux 3.7/x86_64.
	Reported by Nelson Beebe.
	* lispbibl.d (MAPPABLE_ADDRESS_RANGE_*) [UNIX_LINUX && AMD64]: Shrink,
	to avoid the address ranges used on Alpine Linux.

2018-02-24  Bruno Haible  <bruno@clisp.org>

	Fix compilation error in C++ mode with musl libc.
	* spvw_mmap.d (mincore_pageinfo_t): Change to 'unsigned char' on all
	Linux platforms.

2018-02-19  Sam Steingold  <sds@gnu.org>

	* constobj.d (lisp_implementation_version_built_string): No need
	for "#ifdef __DATE__", it is widely supported.

2018-02-18  Bruno Haible  <bruno@clisp.org>

	Bump version number.
	* version.sh: Bump version number to 2.49.93+.
	* version.h, src/configure: Regenerated.

2018-02-18  Bruno Haible  <bruno@clisp.org>

	Avoid "warning: command substitution: ignored null byte in input".
	Reported by Nelson Beebe.
	* m4/bold.m4 (RSE_BOLD): For vt100, remove trailing NUL bytes. Only
	physical terminals need these NULs; physical terminals are not in use
	any more nowadays.
	* aclocal.m4, src/configure, modules/*/configure: Regenerated.

2018-02-18  Bruno Haible  <bruno@clisp.org>

	Improve installation documentation.
	Reported by Nelson Beebe.
	* DEPENDENCIES: State which libsigsegv version to use on IRIX.

2018-02-18  Bruno Haible  <bruno@clisp.org>

	Make KERNELVOID32_HEAPCODES work on Linux/arm, Linux/hppa, Linux/m68k.
	Reported by Sébastien Villemot <sebastien@debian.org>.
	* lispbibl.d (KERNELVOID32A_HEAPCODES/KERNELVOID32B_HEAPCODES):
	If STACK_ADDRESS_RANGE >= 0xE0000000, use KERNELVOID32A_HEAPCODES, not
	KERNELVOID32B_HEAPCODES.
	(KERNELVOID32_HEAPCODES_WORKS): Set to 1 for Linux/hppa, Linux/m68k.
	(ONE_FREE_BIT_HEAPCODES/KERNELVOID32_HEAPCODES): Remove special handling
	of Linux/hppa and Linux/m68k.
	* Makefile.devel (multibuild-linux-hppa, multibuild-linux-m68k): Depend
	on build-porting32-gcc-kernelvoid32_heapcodes.

2018-02-17  Bruno Haible  <bruno@clisp.org>
